@@ -1,3 +1,9 @@
+Mon Jun 29 20:18:11 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* flax/searchserver/jstemplates.py,
+	  flax/searchserver/unittests/jstemplate_test.py: Code for
+	  evaluating search templates written in javascript.
+
 Mon Jun 29 19:37:30 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* flax/searchserver/queries.py,
